--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     ></script>
     <script
         type="module"
-        src="main.js"
+        src="./dist/main.js"
     ></script>
 </head>
 
@@ -81,7 +81,7 @@
                         <input
                             type="range"
                             name="light intensity"
-                            id="light_intensity"
+                            class="light_intensity"
                             value="0"
                             min="0"
                             max="10"
@@ -117,7 +117,7 @@
                         <input
                             type="range"
                             name="light intensity"
-                            id="light_intensity"
+                            class="light_intensity"
                             value="0"
                             min="0"
                             max="10"
@@ -153,7 +153,7 @@
                         <input
                             type="range"
                             name="light intensity"
-                            id="light_intensity"
+                            class="light_intensity"
                             value="0"
                             min="0"
                             max="10"
@@ -192,7 +192,7 @@
                         <input
                             type="range"
                             name="light intensity"
-                            id="light_intensity"
+                            class="light_intensity"
                             value="0"
                             min="0"
                             max="10"
@@ -228,7 +228,7 @@
                         <input
                             type="range"
                             name="light intensity"
-                            id="light_intensity"
+                            class="light_intensity"
                             value="0"
                             min="0"
                             max="10"
@@ -264,7 +264,7 @@
                         <input
                             type="range"
                             name="light intensity"
-                            id="light_intensity"
+                            class="light_intensity"
                             value="0"
                             min="0"
                             max="10"
@@ -303,7 +303,7 @@
                         <input
                             type="range"
                             name="light intensity"
-                            id="light_intensity"
+                            class="light_intensity"
                             value="0"
                             min="0"
                             max="10"
